fix(crawler): replace simulated slugs with 100% verified real live APIs for Ashby, Greenhouse, Remotive, and Romanian platforms